--- a/Server/Server/Server.csproj
+++ b/Server/Server/Server.csproj
@@ -32,8 +32,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="AWSSDK">
-      <HintPath>AWSSDK.dll</HintPath>
+      <HintPath>..\Binaries\AWSSDK.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Common">
+      <HintPath>..\Binaries\ServiceStack.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces">
+      <HintPath>..\Binaries\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Redis">
+      <HintPath>..\Binaries\ServiceStack.Redis.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\Binaries\AWSSDK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
