--- a/android/RecordThePiano/src/main/AndroidManifest.xml
+++ b/android/RecordThePiano/src/main/AndroidManifest.xml
@@ -22,8 +22,10 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DESK_DOCK" />
+                <category android:name="android.intent.category.CAR_DOCK" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name="com.blucz.recordthepiano.SettingsActivity" />
